# ESP32-P4-NINA-Display

./: .gitignore  CLAUDE.md  CMakeLists.txt  MULTI_INSTANCE_PLAN.md  README.md  build_firmware.ps1  esphome_log.txt  firmware-metrics.json  generate_version.cmake  log.lvgl_demo_v9.20260317184241.txt  partitions.csv  repomix-output.xml  sdkconfig.defaults  tmpmoon_config.json  tmpmoon_cookies.txt  tmpnd2_logs.txt  waveshare-p4-panel.yaml
.claude/: settings.local.json
.github/workflows/: auto-version-bump.yml  build-snd.yml  build.yml  display-metrics.yml  host-tests.yml  manual-version-bump.yml  pr-summary.yml  version-check.yml
.superpowers/brainstorm/1672-1774056702/: .server-stopped  all-mockups.html  compare-approaches.html  mockup-a-unified.html  mockup-b-visual-grid.html  mockup-c-timeline.html  mockup-final.html  scope-clarified.html  scope-question.html  waiting.html
.superpowers/brainstorm/1834-1774307214/: .server-stopped  idle-indicator-approaches.html  idle-indicator-dot.html  idle-indicator-pages.html  idle-indicator-v2.html
api/: Untitled-1.json
common/: base_config.yaml  controls.yaml  display_lvgl.yaml  ha_entity_config.yaml  hardware_io.yaml  logic_globals.yaml  sensors_ha.yaml  sensors_plants.yaml
components/esp32_p4_wifi6_touch_lcd_4b/: esp32_p4_wifi6_touch_lcd_4b.c
docs/: REFACTOR.md
docs/plans/: 2026-03-02-allsky-page-design.md  2026-03-02-allsky-page-plan.md
docs/superpowers/plans/: 2026-03-14-config-backup-restore.md
docs/superpowers/specs/: 2026-03-14-config-backup-restore-design.md
main/: CMakeLists.txt  Kconfig.projbuild  allsky_client.c  allsky_client.h  app_config.c  app_config.h  app_config_forward.h  axi_qos.c  axi_qos.h  build_version.h.in  config_ui.html  control_registry.c  control_registry.h  crash_log.c  crash_log.h  demo_data.c  demo_data.h  display_defs.h  fragment_allsky.html  fragment_api.html  fragment_backup.html  fragment_behavior.html  fragment_clock.html  fragment_display.html  fragment_ha.html  fragment_image_display.html  fragment_json.html  fragment_logs.html  fragment_nodes.html  fragment_spotify.html  fragment_system.html  goes_client.c  goes_client.h  graph_data_types.h  ha_client.c  ha_client.h  http_fetch.c  http_fetch.h  http_fetch_policy.h  idf_component.yml  (+76 more)
main/ui/: graph_downsample.c  graph_downsample.h  info_overlay_types.h  lv_font_material_icons_idle.c  lv_font_material_safety.c  lv_font_montserrat_64.c  lv_font_overpass_16.c  lv_font_overpass_27.c  lv_font_playfair_228.c  lv_font_playfair_90.c  lv_font_superscript_24.c  lv_font_warning_128.c  lv_font_warning_128.h  nina_alerts.c  nina_alerts.h  nina_allsky.c  nina_allsky.h  nina_clock.c  nina_clock.h  nina_dashboard.c  nina_dashboard.h  nina_dashboard_internal.h  nina_dashboard_update.c  nina_empty_state.c  nina_empty_state.h  nina_event_log.c  nina_event_log.h  nina_graph_controls.c  nina_graph_internal.h  nina_graph_overlay.c  nina_graph_overlay.h  nina_ha.c  nina_ha.h  nina_idle_indicator.c  nina_idle_indicator.h  nina_image_display.c  nina_image_display.h  nina_info_autofocus.c  nina_info_camera.c  nina_info_filter.c  (+54 more)
nina_API/: README_API_STATUS.md  README_ASTROMELE3.md  Websocket-V2.md  astromele3_endpoint_summary.txt  astromele3_status_combined.json  fetch_astromele3_combined.py  fetch_status_endpoints.py  instructions.md  instructions.txt
plans/: lvgl-9.5-upgrade.md
temp/: ha_sensors.yaml  lvgl.yaml
test/host/: CMakeLists.txt  README.md  test_config_forward.c  test_graph_downsample.c  test_http_policy.c  test_poll_backoff.c  test_route_auth.c  test_session_stats.c  test_settings_table.c
test/host/shims/: esp_err.h  esp_heap_caps.h  esp_http_client.h  esp_log.h  esp_system.h  esp_timer.h  sdkconfig.h  shims.c
test/host/shims/freertos/: FreeRTOS.h  portmacro.h  semphr.h  task.h
test/host/tests/: test_nina_sequence.c  test_time_parse.c
test/moon/: test_moon_compute.c
tests/: run_test.py  test_config.yaml
tests/grafana/: dashboard.json
tests/influx/: setup.py  writer.py
tests/orchestrator/: alert_monitor.py  control_api.py  metrics_collector.py  phase_manager.py  report_generator.py
tests/simulator/: equipment_state.py  nina_server.py  session_timeline.py
tests/workloads/: base.py  concurrent_conns.py  config_churn.py  http_stress.py  nina_monitor.py  page_cycle.py
